# stock-report

./: .env.example  .gitignore  CLAUDE.md  ML_ROADMAP.md  README.md  THIRD_PARTY_NOTICES.md  app.py  attachment_parser.py  backtest.py  backtest_compare.py  backtest_multi.py  backtest_v2.py  barbell_strategy.py  bot_healthcheck.py  bot_smoke_test.py  bot_watchdog.sh  conftest.py  daily_leverage_retrain.py  daily_ranking.py  dca_weights.json  deliver_investment_report.sh  deliver_market_report.sh  etf_meta.py  fmt.py  holding_commands.py  holding_manager.py  investment_report.py  kis_mock.py  kis_stream.py  kiwoom_mock.py  kiwoom_sync_rest.py  kr200_meta.py  kr_etf_seed.py  market_report.py  ml_smoke_test.py  news_spike_detector.py  next-env.d.ts  notify.py  notion_sync.py  order_generator.py  (+27 more)
.streamlit/: config.toml
agent_console/: __init__.py  agent.py  context.py  migrate_memory.py  portfolio_matrix_dsl.py  qmd_search.py  server.py  shared_memory.py  storage.py  wiki.py
backtest/: backtest.py  backtest_multi.py  concentration_validated_backtest.py  entry_calibration.py  factor_premium_backtest.py  income_compounding_backtest.py  index_strategy_backtest.py  kr_policy_backtest.py  kr_sideways_backtest.py  leverage_structural_backtest.py  phase1_entry_backtest.py  phase_ladder_backtest.py  regime_core_backtest.py  sideways_backtest.py  us_policy_backtest.py
bot/: accum_commands.py  attachment_parser.py  earnings_commands.py  entry_commands.py  evolve_command.py  guest_portfolio.py  guest_report.py  holding_commands.py  order_generator.py  price_alerts.py  (+2 more)
(+422 files in other folders)
