[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-report"
version = "0.0.0"
requires-python = ">=3.11"

[tool.setuptools]
packages = []
py-modules = [
  "app",
  "portfolio_sync_server",
  "store",
  "notify",
  "safe_io",
]

[tool.vercel]
entrypoint = "app:app"
